# Dossier-Analyzer

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  Dossier-Analyzer.ps1  README.md  app.py  docker-compose.yml  login_page.py  pyproject.toml  streamlit_entry.py
.streamlit/: config.toml
dossier_analyzer/: __init__.py  extract.py  gcs_ops.py  gcs_tree.py  keyword_lists_gcs.py  match.py  scan.py
dossierkit/: __init__.py  extract.py  match.py
windows-launchers/: Dossier-Analyzer.bat  Dossier-Analyzer.ps1
