[project]
name = "dossier-analyzer"
version = "0.1.0"
description = "Dossier Analyzer — explore document dossiers, preview files, and rank folders by keyword matches."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdfminer-six>=20260107",
    "pymupdf>=1.27.2.2",
    "streamlit>=1.40.0",
]
