[project]
name = "dossier-analyzer"
version = "1.1.2"
description = "Dossier Analyzer — explore document dossiers, preview files, and rank folders by keyword matches."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.10",
    "google-cloud-storage>=2.14.0",
    "openpyxl>=3.1.5",
    "pdfminer-six>=20260107",
    "pymupdf>=1.27.2.2",
    "streamlit>=1.40.0",
]
